--- a/ArticleTemplates/assets/scss/style-sync.css
+++ b/ArticleTemplates/assets/scss/style-sync.css
@@ -3105,6 +3105,7 @@ body.the-minute {
               top: 4px; }
       body.the-minute .article--liveblog .block .from-content-api aside.element-rich-link {
         border: none;
+        float: none;
         margin: -6px 12px 18px;
         max-width: 460px;
         padding: 0;
@@ -3266,6 +3267,8 @@ body.the-minute {
         height: 50%;
         justify-content: flex-start; }
       body.the-minute .article--liveblog .block.block--live-key-event.is-textonly .from-content-api {
+        height: calc(100% - 60px);
+        overflow: hidden;
         padding-bottom: 60px; }
       body.the-minute .article--liveblog .block.block--live-summary .from-content-api > :first-child {
         margin-top: 0;
