--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -4613,6 +4613,7 @@
                 top: 4px; }
         #sandbox body.the-minute .article--liveblog .block .from-content-api aside.element-rich-link {
           border: none;
+          float: none;
           margin: -6px 12px 18px;
           max-width: 460px;
           padding: 0;
@@ -4774,6 +4775,8 @@
           height: 50%;
           justify-content: flex-start; }
         #sandbox body.the-minute .article--liveblog .block.block--live-key-event.is-textonly .from-content-api {
+          height: calc(100% - 60px);
+          overflow: hidden;
           padding-bottom: 60px; }
         #sandbox body.the-minute .article--liveblog .block.block--live-summary .from-content-api > :first-child {
           margin-top: 0;
